# CodeMap

./: .gitignore  README.md  README.zh-CN.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
ccplugin/.claude-plugin/: plugin.json
ccplugin/cli/: package-lock.json  package.json
ccplugin/cli/src/: differ.js  graph.js  parser.js  scanner.js  slicer.js  (+1 more)
ccplugin/commands/: impact.md  load.md  prompts.md  query.md  scan.md  update.md
ccplugin/hooks/: hooks.json
cli/: package-lock.json  package.json
cli/src/: differ.js  graph.js  impact.js  index.js  parser.js  query.js  scanner.js  slicer.js  traverser.js
cli/test/: differ.test.js  parser.test.js
docs/plan/: 2026-02-20-rust-cli-rewrite.md
docs/plans/: 2026-02-20-codemap-design.md  2026-02-20-codemap-implementation.md
rust-cli/: Cargo.toml
rust-cli/src/: differ.rs  grammar_tests.rs  graph.rs  impact.rs  lib.rs  main.rs  parser.rs  path_utils.rs  query.rs  scanner.rs  slicer.rs  traverser.rs
rust-cli/src/commands/: impact.rs  mod.rs  query.rs  scan.rs  slice.rs  status.rs  update.rs
rust-cli/src/languages/: c_lang.rs  cpp.rs  go_lang.rs  java.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
rust-cli/test_fixtures/src/: index.ts
rust-cli/test_fixtures/src/auth/: login.ts
rust-cli/tests/: differ_compat.rs  fixture_compat.rs  impact_compat.rs  query_compat.rs  scanner_compat.rs  slicer_compat.rs  variable_compat.rs
skills/impact/: SKILL.md
skills/load/: SKILL.md
skills/query/: SKILL.md
skills/scan/: SKILL.md
skills/update/: SKILL.md
(+50 files in other folders)
