[package]
name = "codegraph"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "codegraph"
path = "src/main.rs"

[lib]
name = "codegraph"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sha2 = "0.10"
ignore = "0.4"
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

[dev-dependencies]

[profile.release]
lto = true
strip = true
opt-level = "z"
